fixed support for scripts when application is run in linux; fixed linux script permissions; started working on line charts

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,6 +21,7 @@
     <script src="/js/statusIndicator.js"></script>
     <script src="/js/liquidFillGauge.js"></script>
     <script src="/js/barChart.js"></script>
+    <script src="/js/lineChart.js"></script>
     <script src="/js/pieChart.js"></script>
     <script type="text/javascript">
         app = angular.module('dashboardApp', []);
