fixed line endings for scripts and refactored third party js files

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css" />
     <link rel="stylesheet" href="/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/css/application.css" />
-    <script src="/js/jquery-1.12.4.js"></script>
-    <script src="/js/jquery.cookie.js"></script>
-    <script src="/js/jquery-ui.js"></script>
-    <script src="/js/sockjs-1.1.1.js"></script>
-    <script src="/js/stomp.js"></script>
-    <script src="/js/angular.js"></script>
-    <script src="/js/angular-touch.js"></script>
-    <script src="/js/bootstrap.js"></script>
-    <script src="/js/d3.js"></script>
+    <script src="/js/vendor/jquery-1.12.4.js"></script>
+    <script src="/js/vendor/jquery.cookie.js"></script>
+    <script src="/js/vendor/jquery-ui.js"></script>
+    <script src="/js/vendor/sockjs-1.1.1.js"></script>
+    <script src="/js/vendor/stomp.js"></script>
+    <script src="/js/vendor/angular.js"></script>
+    <script src="/js/vendor/angular-touch.js"></script>
+    <script src="/js/vendor/bootstrap.js"></script>
+    <script src="/js/vendor/d3.js"></script>
     <script src="/js/statusIndicator.js"></script>
     <script src="/js/liquidFillGauge.js"></script>
     <script src="/js/barChart.js"></script>
