--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -222,7 +222,7 @@
             </div>
         </div>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" ng-show="false">
         <div class="panel panel-default monitor">
             <div class="panel-heading clearfix">
                 Global Chat
