parameterized the database settings and externalized the configuration files; made line chart ticks more spread out; fixed the tests; gave default config values

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html ng-app="dashboardApp" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>System Dashboard</title>
+    <title>Urim - Dashboard</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
