fixed monitor heights to better fill up the space; adjusted bar chart and line chart margins; try to keep backface text from showing

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -127,11 +127,11 @@
                 <div class="flip-container flex" ng-class="{'settings': monitor.flipped[mon.id]}">
                     <div class="flipper flex">
                         <div class="col-xs-12 ccl-sm-12 front monitor-content" ng-click="monitor.flip_monitor(mon.id);">
-                            <div class="" ng-show="mon.show_raw">
+                            <div class="fill-height" ng-show="mon.show_raw &amp;&amp; !monitor.flipped[mon.id]">
                                 {{mon.url}}&nbsp;{{mon.monitorType}}&nbsp;{{mon.statType}}&nbsp;{{mon.parser}}&nbsp;{{mon.chart}}&nbsp;{{mon.protocol}}&nbsp;{{mon.interval}}<br />{{monitor.get_results(mon.id)}}
                             </div>
-                            <div class="" ng-hide="mon.show_raw">
-                                <svg id="chart_{{mon.id}}" width="97%" height="200" class="chart" onclick="alert('hello');"></svg>
+                            <div class="fill-height" ng-hide="mon.show_raw">
+                                <svg id="chart_{{mon.id}}" width="97%" height="97%" class="chart" onclick="alert('hello');"></svg>
                             </div>
                         </div>
                         <div class="col-xs-12 ccl-sm-12 back monitor-content">
