--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -198,6 +198,7 @@
                                     </select>
                                 </div>
                                 <div class="form-group">
+                                    <button type="button" class="btn btn-default" ng-click="monitor.copy_monitor(mon.id)"><i class="fa fa-clone"></i> Copy Monitor</button>
                                     <button type="button" class="btn btn-danger" ng-click="monitor.confirm_delete_popup(mon.id, mon.name)"><i class="fa fa-minus"></i> Remove Monitor</button>
                                 </div>
                             </form>
