refactored client code to combine common code between rest and mq clients; cache system responses to prevent excessive requests; started working on user settings popup; changed font styling of some elements; removed test hello monitor click handler

--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -40,6 +40,19 @@ body {
     text-align: right;
 }
 
+.small-caps {
+    text-rendering: auto;
+    font-variant: small-caps;
+}
+
+.capitalize {
+    text-transform: capitalize;
+}
+
+.caps {
+    text-transform: uppercase;
+}
+
 /* entire container, keeps perspective */
 .flip-container {
 	perspective: 1000px;
