refactored get_current_user function by extracting parts of it into an optional callback; added the ability to export a user's dashboards

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -396,8 +396,8 @@
                             </div>
                         </div>
                         <div class="form-group clearfix btn-toolbar">
-                            <button type="submit" class="btn btn-warning pull-right" ng-click="">Export Data</button>&nbsp;
-                            <button type="button" class="btn btn-warning pull-right" ng-click="">Import Data</button>&nbsp;
+                            <button type="submit" class="btn btn-warning pull-right" ng-click="user.export()">Export Data</button>&nbsp;
+                            <button type="button" class="btn btn-warning pull-right" ng-click="user.import()">Import Data</button>&nbsp;
                             <button type="button" class="btn btn-default pull-right" data-dismiss="modal" ng-click="user.close_settings_popup()">Close</button>
                         </div>
                     </form>
