finished js tests for user controller and dashboard controller

--- a/src/main/resources/templates/mocha.html
+++ b/src/main/resources/templates/mocha.html
@@ -33,6 +33,7 @@
     <script src="/js/dashboardController.js"></script>
     <script src="/js/monitorController.js"></script>
     <script src="/js/test/userController.js"></script>
+    <script src="/js/test/dashboardController.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             mocha.checkLeaks();
