--- a/src/main/resources/templates/mocha.html
+++ b/src/main/resources/templates/mocha.html
@@ -34,6 +34,7 @@
     <script src="/js/monitorController.js"></script>
     <script src="/js/test/userController.js"></script>
     <script src="/js/test/dashboardController.js"></script>
+    <script src="/js/test/monitorController.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             mocha.checkLeaks();
