--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -85,8 +85,8 @@
                                 <div class="form-group" ng-show="user.mode.register &amp;&amp; user.show_password">
                                     <input type="text" ng-model="user.confirm_password" class="form-control" placeholder="Repeat Password" />
                                 </div>
-                                <div class="form-group checkbox">
-                                    <label class="pull-right">
+                                <div class="form-group checkbox pull-right clear">
+                                    <label>
                                         <input type="checkbox" ng-model="user.show_password" /> Show Password
                                     </label>
                                 </div>
@@ -99,14 +99,15 @@
                                         <option value="RW_USER">Power User</option>
                                     </select>
                                 </div>
-                                <div class="form-group checkbox" ng-show="user.mode.login">
-                                    <label class="pull-right">
+                                <div class="form-group checkbox pull-right clear" ng-show="user.mode.login">
+                                    <label>
                                         <input type="checkbox" ng-model="user.remember_me" /> Remember Me
                                     </label>
                                 </div>
-                                <div class="form-group clearfix btn-toolbar">
-                                    <button type="submit" ng-click="user.login()" ng-class="{'btn-primary': user.mode.login, 'btn-default': user.mode.register}" class="btn pull-right">Login</button>&nbsp;
-                                    <button type="submit" ng-click="user.register()" ng-class="{'btn-primary': user.mode.register, 'btn-default': user.mode.login}" class="btn pull-right">Register</button>
+                                <div class="form-group clear btn-toolbar">
+                                    <button type="submit" ng-click="user.login()" ng-class="{'btn-primary': user.mode.login, 'btn-default': user.mode.register}" class="btn pull-right" ng-hide="user.logged_in">Log in</button>&nbsp;
+                                    <button type="submit" ng-click="user.register()" ng-class="{'btn-primary': user.mode.register, 'btn-default': user.mode.login}" class="btn pull-right" ng-hide="user.logged_in">Register</button>
+                                    <button type="submit" ng-click="user.logout()" class="btn btn-primary pull-right" ng-show="user.logged_in">Log out</button>
                                 </div>
                             </form>
                         </li>
@@ -123,7 +124,7 @@
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 sortable" ng-repeat="mon in monitor.ordered_monitors()" repeat-final="" id="monitor_{{mon.id}}" data-id="{{mon.id}}">
         <div class="panel panel-default monitor">
             <div class="panel-heading clearfix small-caps">
-                {{mon.name ? mon.name : "Unnamed"}} <button type="button" ng-click="monitor.flip_monitor(mon.id);" class="btn pull-right btn-xs" ng-class="{'btn-default': !monitor.flipped[mon.id], 'btn-success': monitor.flipped[mon.id]}"><i class="fa" ng-class="{'fa-cog': !monitor.flipped[mon.id], 'fa-check-circle': monitor.flipped[mon.id]}"></i></button> <button type="button" class="btn pull-right btn-xs btn-link" ng-show="monitor.has_errors[mon.id]" data-toggle="tooltip" data-placement="bottom" ng-attr-title="{{monitor.errors[mon.id]}}"><i class="fa fa-warning warning"></i></button>
+                {{mon.name ? mon.name : "Unnamed"}} <button type="button" ng-click="monitor.flip_monitor(mon.id);" class="btn pull-right btn-xs" ng-class="{'btn-default': !monitor.flipped[mon.id], 'btn-success': monitor.flipped[mon.id]}"><i class="fa" ng-class="{'fa-cog': !monitor.flipped[mon.id], 'fa-check-circle': monitor.flipped[mon.id]}"></i></button> <button type="button" class="btn pull-right btn-xs btn-link" id="monitor_error_{{mon.id}}" ng-show="monitor.has_errors[mon.id]" data-toggle="tooltip" data-placement="bottom" ng-attr-title="{{monitor.errors[mon.id]}}"><i class="fa fa-warning warning"></i></button>
             </div>
             <div class="panel-body flex">
                 <div class="flip-container flex" ng-class="{'settings': monitor.flipped[mon.id]}">
