--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -119,7 +119,7 @@
     </div>
 </nav>
 
-<div class="container-fluid" ng-controller="MonitorController as monitor" id="dashboard_content">
+<div class="container-fluid" ng-controller="MonitorController as monitor" id="dashboard_content" ng-show="monitor.current_dashboard() > ''">
     <noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript!  Websocket relies on Javascript being enabled.  Please enable Javascript and reload this page!</h2></noscript>
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 sortable" ng-repeat="mon in monitor.ordered_monitors()" repeat-final="" id="monitor_{{mon.id}}" data-id="{{mon.id}}">
         <div class="panel panel-default monitor">
@@ -211,7 +211,7 @@
             </div>
         </div>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2" ng-show="monitor.current_dashboard() > ''" >
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2" >
         <div class="panel panel-default monitor">
             <div class="panel-heading clearfix small-caps">
                 Monitor Actions
@@ -225,6 +225,56 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
+<div class="container-fluid" id="intro_content" ng-controller="DashboardController as dashboard" ng-hide="dashboard.logged_in()">
+    <div class="row">
+        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
+        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 text-center">
+            <h1>Introducing Urim</h1>
+            <p>A flexible and extensible dashboard application</p>
+        </div>
+        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
+    </div>
+    <div class="row bg-info">
+        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
+        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 text-center">
+            <div class="page-header">
+                <h1>Features</h1>
+            </div>
+            <div class="list-group">
+                <div class="list-group-item">
+                    <a class="list-group-item-heading" role="button" data-toggle="collapse" href="" aria-expanded="false" aria-controls="features_open_source" data-target="#features_open_source">100% free and open-source</a>
+                    <div class="collapse list-group-item-text" id="features_open_source">
+                        This application is licensed under the MIT License.  Third-party libraries used include: Spring Boot, jQuery, AngularJS, D3, StompJS, SockJS, Mocha, Chai, Bootstrap, and a modified Liquid Fill Gauge (by Curtis Bratton), all of which are also free and open-source.
+                    </div>
+                </div>
+                <div class="list-group-item">
+                    <a class="list-group-item-heading" role="button" data-toggle="collapse" href="" aria-expanded="false" aria-controls="features_customization" data-target="#features_customization">Multiple levels of customization</a>
+                    <div class="collapse list-group-item-text" id="features_customization">
+                        Using the distributable Jar file, as-is, allows for specifying execution scripts, chart types, and output parsers - the moving pieces that need to be versatile.  Or, rolling your own by downloading the source code, making any desired customization, and compiling the application allows for any modification.  Just be warned that should you choose to go down this path, the author does not claim any responsibility for the consequences that result.
+                    </div>
+                </div>
+                <div class="list-group-item">
+                    <a class="list-group-item-heading" role="button" data-toggle="collapse" href="" aria-expanded="false" aria-controls="features_dataflow" data-target="#features_dataflow">Straightforward data flow</a>
+                    <div class="collapse list-group-item-text" id="features_dataflow">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
+    </div>
+    <div class="row">
+        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
+        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 text-center">
+            <div class="page-header">
+                <h1>How it works</h1>
+            </div>
+            <p>A flexible and extensible dashboard application</p>
+        </div>
+        <div class="hidden-xs hidden-sm col-md-1 col-lg-2"></div>
     </div>
 </div>
 
