added the data model to the intro page and cleaned up the data flow diagram

--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -244,7 +244,20 @@ body {
     stroke-width: 1.5px;
 }
 
+.chart .dataflow .node.type-multiple rect {
+    stroke-width: 3px;
+    stroke: #333;
+}
+
+.chart .dataflow .node.type-singular rect {
+    stroke: #333;
+}
+
 .chart .dataflow .node text {
+    pointer-events: none;
+}
+
+.chart .dataflow .edgeLabel text {
     pointer-events: none;
 }
 
@@ -282,8 +295,31 @@ body {
     animation-timing-function: ease-in-out;
 }
 
+.chart .datastructure .node rect {
+    stroke: #999;
+    fill: #fff;
+    stroke-width: 1.5px;
+}
+
+.chart .datastructure .node.type-mongo rect {
+    fill: #999;
+}
+
+.chart .datastructure .node text {
+    pointer-events: none;
+}
+
+.chart .datastructure .edgeLabel text {
+    pointer-events: none;
+}
+
+.chart .datastructure .edgePath path {
+    stroke: #333;
+    stroke-width: 1.5px;
+    pointer-events: none;
+}
+
 @keyframes pulsate {
-    0% { fill: rgba(255, 255, 255, 255); stroke-width: 1.5px; stroke: #999; }
     100% { fill: rgba(200, 200, 255, 255); stroke-width: 3px; stroke: #99F; }
 }
 
